# section3

./: README.md  config.toml  index.html  juice.css  package.json  robots.txt  routes.js  sitemap.xml
.github/workflows/: main.yml
about/: index.html
blog/: index.html
blog_content/2023-10-08t15-20/: index.html
blog_content/2023-10-08t18-57/: index.html
community/: index.html
contact/: index.html
content/: _index.md  about.md  background.md  blog.md  community.md  contact.md  faq.md  goodbye.md  hello.md  introduction.md  merch.md
content/blog_content/: 2023-08-12t12-10.md  2023-08-23t23-01.md  2023-10-07t07-49.md  2023-10-08t15-20.md  2023-10-08t18-57.md  _index.md  introductory.md
content/posts/: 2023-08-12t12-10.md  2023-08-23t23-01.md  2023-10-07t07-49.md  2023-10-08t03-20.md  2023-10-08t15-20.md  2023-10-08t18-57.md
faq/: index.html
make_blog/: Cargo.toml
make_blog/src/: main.rs
merch/: index.html
posts/2023-08-12t12-10/: index.html
posts/2023-08-23t23-01/: index.html
posts/2023-10-07t07-49/: index.html
posts/2023-10-08t03-20/: index.html
posts/2023-10-08t15-20/: index.html
posts/2023-10-08t18-57/: index.html
public/: index.html  robots.txt  sitemap.xml
public/background/: index.html
public/community/: index.html
public/faq/: index.html
public/introduction/: index.html
templates/: _variables.html  index.html
themes/juice/sass/: _markdown.scss  _text.scss
