[package]
name = "make_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
frontmatter = "0.4"
pulldown-cmark = "0.9"
regex = "1.5.2"
gray_matter = "0.2"
serde = { version = "1.0", features = ["derive"] }
